--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -24,9 +25,9 @@
                 <div class="img_under_img" v-for="img, index in contentList"
                     :class="index === currentImg ? 'active':'' ">
                     <img class="img_style " v-bind:src="img.url" v-bind:alt="index">
-                    <div class="img_text">
+                    <div class="img_text text-end ps-3">
                         <h3>{{ img.title }}</h3>
-                        <p>lorem ipsum</p>
+                        <p>{{ img.description }}</p>
                     </div>
 
                 </div>
@@ -37,12 +38,9 @@
 
             <div class="right_img_cont">
 
-                <div>
-                    <img src="IMG/01.jpg" alt="">
-                    <img src="IMG/02.jpg" alt="">
-                    <img src="IMG/03.jpg" alt="">
-                    <img src="IMG/04.jpg" alt="">
-                    <img src="IMG/05.jpg" alt="">
+                <div v-for="img, index in contentList" v-bind:class="index === currentImg ? 'thumb_active':''">
+                    <img v-bind:src="img.url" alt="" class="">
+
                 </div>
 
             </div>
