--- a/index.html
+++ b/index.html
@@ -38,18 +38,19 @@
 
             <div class="right_img_cont">
 
-                <div v-for="img, index in contentList" v-bind:class="index === currentImg ? 'thumb_active':''">
-                    <img v-bind:src="img.url" alt="" class="">
+                <div v-for="img, index in contentList">
+                    <img v-bind:src="img.url" alt=""
+                        v-bind:class="index === currentImg ? 'thumb_active':'thumbnail_opacity'">
 
-                    <div class="arrow">
-                        <div class="arrow_up bg-light rounded-circle" @click="funzioneUp">
-                            <i class="fas fa-chevron-up myIconSize"></i>
-                        </div>
-                        <div class="arrow_down bg-light rounded-circle" @click="funzioneDown">
-                            <i class="fas fa-chevron-down myIconSize"></i>
-                        </div>
-
+                </div>
+                <div class="arrow">
+                    <div class="arrow_centered arrow_up bg-light my_rounded_border" @click="funzioneUp">
+                        <i class="fas fa-chevron-up myIconSize"></i>
                     </div>
+                    <div class="arrow_centered arrow_down bg-light my_rounded_border" @click="funzioneDown">
+                        <i class="fas fa-chevron-down myIconSize"></i>
+                    </div>
+
                 </div>
 
             </div>
